fix: Update scripts in package.json and improve Swagger documentation to OpenAPI 3.0
